Prefix root-level ignores with /
The previous rules were matching files within the project, when we
only intended to ignore those that started with those names.

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 *.gem
-._*
 .*.swp
-.bundle
 .DS_Store
-.rbenv-version
-.rvmrc
+._*
 .sass-cache
-config/config.yml
-config/deploy.rb
-db/*.db
-pkg/*
-plugins
-public/cache
-spec/tmp
+/.rbenv-version
+/.ruby-version
+/.rvmrc
+/config/config.yml
+/config/deploy.rb
+/db/*.db
+/pkg/*
+/plugins
+/public/cache
+/spec/tmp
