Prefer Kernel.system to backticks
When running external programs backticks come in very handy if you want
to operate on the text printed by a program, but they also have the side
effect of preventing that output from being printed to STDOUT.

When it's useful to display the output of a command, `Kernel.system`
feels like a good fit.

--- a/templates/plugins/Rakefile
+++ b/templates/plugins/Rakefile
@@ -47,12 +47,12 @@ end
 
 task 'release:source_control_push' do
   unless already_tagged?
-    `git tag -a -m "Version #{version}" v#{version}`
-    `git push`
-    `git push --tags`
+    system "git tag -a -m 'Version #{version}' v#{version}"
+    system 'git push'
+    system 'git push --tags'
   end
 end
 
 task 'release:rubygem_push' do
-  `gem push #{built_gem_path}`
+  system "gem push #{built_gem_path}"
 end
